@@ -1,3 +1,8 @@
+2007-04-17  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #4368]
+	* stdlib/stdlib.h: Remove obsolete part of comment for realpath.
+
 2007-04-16  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #4364]
